# Bootcamp-2026-IA-Generativa--LLM-Apps--Agentes-IA--Cursor-AI

./: .gitignore
02-advanced-chatbot-master/: messages.json
04-simple-agent-master/: .env.example  001-simple-agent.py
09-key-data-extraction-master/: 001-key-data-extraction.py
1-sec23/: 007-LC-2nd-birthday.ipynb  Untitled.ipynb  Untitled1.ipynb  sec-23.ipynb
b401-master/: 002-trying-different-llm-models.py  003-prompt-templates.py  004-grok4.ipynb  005-output-parsers.py  grok_test.py  zzz-nb002-trying-different-llm-models.ipynb
b401-master/deepseek-test/: deepseek_test.py  pyproject.toml
b401-master/gpt_oss_groq/: main.py  pyproject.toml
b402-master/: 001-data-loaders.py  002-splitters.py  003-embeddings.py  004-vector-stores.py  005-retrievers.py  006-top-k.py  007-rag-with-lcel.py
b403-master/: 001-simple-chain.py  003-runnable-exec-order.py  007-combining-chain.py
b405-master/: 001-conversation-buffer.py
bootcamp-ia-generativa-y-aplicaciones-llm/: 00-Installation-and-Deployment-Guide.ipynb  001-what-is-saas.ipynb  001-why-claude-code.ipynb  002-claude-code-quickstart.ipynb  002-saas-disruption.ipynb  003-combine-cursor-and-claude-code.ipynb  005-kimi.ipynb  008-gen-ai-tiny-startups.ipynb  009-mcp-adoption.ipynb  01-Project-Setup-and-Installation.ipynb  02-Understanding-and-Installing-PostgreSQL.ipynb  03-FastAPI-Introduction-and-Setup.ipynb  04-Configuration-and-Environment-Management.ipynb  05-Database-Models-and-Schema-Design.ipynb  06-Database-Migrations-with-Alembic.ipynb  07-CRUD-Operations-API-Endpoints-and-CORS.ipynb  070-cursor-updates.ipynb  (+62 more)
(+2 files in other folders)
