[tool.poetry]
name = "deepseek-test"
version = "0.1.0"
description = ""
authors = ["juliandos <95juliandos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.1.1"
langchain-deepseek = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
