[tool.poetry]
name = "gpt-oss-groq"
version = "0.1.0"
description = ""
authors = ["juliandos <95juliandos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.27"
openai = "^1.109.1"
langchain-community = "^0.3.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
